fixed graph to both be centered and correctly overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -336,6 +336,7 @@
 
 html, body {
   margin-bottom: 3%;
+  overflow-x: hidden;
   text-align: center;
   background-color: #343a40!important;
   background-blend-mode: color;
@@ -1005,6 +1006,9 @@ input[type=text]:hover {
 
 #graph-container {
   height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-top: 2em;
   overflow-x: auto;
   overflow-y: hidden;
@@ -1034,10 +1038,12 @@ input[type=text]:hover {
 
 #upper-container {
   display: flex;
+  margin: auto;
 }
 
 .x-axis {
   display: flex;
+  margin: auto;
 }
 
 .filler {
@@ -1557,8 +1563,6 @@ h3 {
 }
 
 .mobile-player-table {
-  display: flex;
-  flex-direction: column;
   width: 100%;
   margin: 0 auto;
 }
